text align fixed

--- a/src/components/Banner/Banner.css
+++ b/src/components/Banner/Banner.css
@@ -110,14 +110,14 @@
 }
 
 .hero .hero__content {
-  text-align: center;
+  /* text-align: center; */
   max-width: 650px;
   margin-left: auto;
 }
 
 .hero__content .hero__logo {
   max-width: 90%;
-  margin: 0 auto 1rem;
+  /* margin: 0 auto 1rem; */
   height: auto;
   display: block;
 }
@@ -194,7 +194,7 @@
   flex-wrap: wrap;
   -webkit-box-pack: center;
   -ms-flex-pack: center;
-  justify-content: center;
+  /* justify-content: center; */
   gap: 0.875rem;
 }
 
